# filegap

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  dev.sh
.codex/skills/commit-prep/: SKILL.md
.codex/skills/docs-sync/: SKILL.md
.codex/skills/issue-branch-setup/: SKILL.md
.codex/skills/issue-workflow/: SKILL.md
.codex/skills/parallel-scope-check/: SKILL.md
.codex/skills/pr-workflow/: SKILL.md
.codex/skills/pre-commit-gate/: SKILL.md
.codex/skills/privacy-review/: SKILL.md
.codex/skills/security-review/: SKILL.md
.codex/skills/test-check/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql.yml  release-cli-community.yml  release-desktop-community.yml  update-homebrew-formula.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src/app/: router.tsx
apps/desktop/src/lib/: desktop.ts  distribution.ts  outputSettings.ts  pageHelpers.ts  pathUtils.test.ts  pathUtils.ts  pdfImages.ts  pdfPreview.ts  settings.ts  workflowBuilder.test.ts  workflowBuilder.ts  zip.test.ts  zip.ts
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/public/: robots.txt  sitemap.xml
apps/web/src/: fonts.css  styles.css  types.ts
apps/web/src/adapters/: pdfEngine.test.ts  pdfEngine.ts
apps/web/src/app/: App.tsx  router.tsx
apps/web/src/lib/: pdfPreview.ts  workflowBuilder.test.ts  workflowBuilder.ts  zip.test.ts  zip.ts
apps/web/src/test/: setupTests.ts
apps/web/src/workers/: pdf.worker.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: extract_cli.rs  extract_images_cli.rs  info_cli.rs  merge_cli.rs  optimize_compress_cli.rs  reorder_cli.rs  split_cli.rs  support_cli.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  models.rs
crates/core/src/ops/: compress.rs  extract.rs  extract_images.rs  info.rs  merge.rs  mod.rs  optimize.rs  reorder.rs  split.rs
docs/: anonymous-hello.md  architecture.md  cli.md  design-system.md  desktop-distribution-roadmap.md  desktop-release.md  desktop.md  page-layouts.md  positioning.md  privacy.md  product-roadmap.md  release-v0.1-checklist.md  roadmap.md  seo-guidelines.md  ui-components.md  web-architecture.md  web.md
docs/security-reports/: 2026-05-23-issue-6-seo-landing-pages.md
docs/security-reports/2026-06-11-full-security-audit/: README.md
docs/security-reports/2026-06-11-full-security-audit/findings/: CI-01-ci-missing-permissions.md  CI-02-actions-unpinned.md  CI-03-workflow-dispatch-injection.md  CI-04-homebrew-token-job-env.md  CI-05-cli-tarball-hash.md  CI-06-no-shasums.md  (+27 more)
shared/design/: tokens.css
testdata/: .gitignore  README.md
(+107 files in other folders)
