[workspace]
members = [
  "crates/core",
  "crates/cli",
]
exclude = ["apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["filegap contributors"]
repository = "https://github.com/your-org/filegap"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
lopdf = "0.35"
