[package]
name = "pdflo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pdflo-core = { path = "../core" }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
lopdf.workspace = true
predicates = "3"
tempfile = "3"
