[package]
name = "filegap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "filegap"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
filegap-core = { path = "../core" }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
lopdf.workspace = true
predicates = "3"
tempfile = "3"
