[package]
name = "filegap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "filegap"
path = "src/main.rs"

[dependencies]
clap.workspace = true
filegap-core = { path = "../core" }
lopdf.workspace = true
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
lopdf.workspace = true
predicates = "3"
tempfile = "3"
